force-app/main/default/objects/Entry__c/fields/Added_to_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to Campaign</label>
    <type>Checkbox</type>
</CustomField>