force-app/main/default/objects/Entry__c/fields/App_Status__c.field-meta.xml
<CustomField>
    <fullName>App_Status__c</fullName>
    <label>App Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Just an idea</fullName>
            </value>
            <value>
                <fullName>Prototyping/Developing</fullName>
            </value>
            <value>
                <fullName>Rolling out to users</fullName>
            </value>
            <value>
                <fullName>In production for a few months</fullName>
            </value>
            <value>
                <fullName>In production for more than 3 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>