force-app/main/default/objects/Entry__c/fields/Average_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Score__c</fullName>
    <formula>Total_Score__c /  Number_of_Scores__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>