force-app/main/default/objects/Entry__c/fields/Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Conflicts__c</fullName>
    <label>Conflicts</label>
    <type>TextArea</type>
</CustomField>