force-app/main/default/objects/Entry__c/fields/Contest__c.field-meta.xml
<CustomField>
    <fullName>Contest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contest</label>
    <referenceTo>Contest__c</referenceTo>
    <relationshipLabel>Entries</relationshipLabel>
    <relationshipName>Entries</relationshipName>
    <type>Lookup</type>
</CustomField>