force-app/main/default/objects/Entry__c/fields/EMEA__c.field-meta.xml
<CustomField>
    <fullName>EMEA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tracking which entries have come from EMEA</description>
    <inlineHelpText>Check box if entry comes from one of the eligible EMEA countries.</inlineHelpText>
    <label>EMEA</label>
    <type>Checkbox</type>
</CustomField>