force-app/main/default/objects/Entry__c/fields/Entry_Result__c.field-meta.xml
<CustomField>
    <fullName>Entry_Result__c</fullName>
    <label>Entry Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not yet Submitted</fullName>
                <default>true</default>
                <label>Not yet Submitted</label>
            </value>
            <value>
                <fullName>Submitted - Not Reviewed</fullName>
            </value>
            <value>
                <fullName>Submitted - Under Review</fullName>
            </value>
            <value>
                <fullName>Scoring Complete</fullName>
            </value>
            <value>
                <fullName>Not a Winner</fullName>
            </value>
            <value>
                <fullName>Winner</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>