force-app/main/default/objects/Entry__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a few people</fullName>
            </value>
            <value>
                <fullName>a department</fullName>
            </value>
            <value>
                <fullName>a few departments</fullName>
            </value>
            <value>
                <fullName>everyone except the dog</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>