force-app/main/default/objects/Entry__c/fields/Impact_Description__c.field-meta.xml
<CustomField>
    <fullName>Impact_Description__c</fullName>
    <label>Impact Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>