force-app/main/default/objects/Entry__c/fields/Link_to_org62_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Link_to_org62_Opportunity__c</fullName>
    <label>Link to org62 Opportunity</label>
    <type>Url</type>
</CustomField>