force-app/main/default/objects/Entry__c/fields/Number_of_Scores__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Scores__c</fullName>
    <label>Number of Scores</label>
    <summaryForeignKey>Score__c.Entry__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>