force-app/main/default/objects/Entry__c/fields/PAE__c.field-meta.xml
<CustomField>
    <fullName>PAE__c</fullName>
    <description>Platform AE&#39;s name</description>
    <inlineHelpText>Platform AE&#39;s name</inlineHelpText>
    <label>PAE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>