force-app/main/default/objects/Entry__c/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <label>Pain Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>