force-app/main/default/objects/Entry__c/fields/Prize_Won__c.field-meta.xml
<CustomField>
    <fullName>Prize_Won__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prize Won</label>
    <referenceTo>Prize__c</referenceTo>
    <relationshipLabel>Winners</relationshipLabel>
    <relationshipName>Winners</relationshipName>
    <type>Lookup</type>
</CustomField>