force-app/main/default/objects/Entry__c/fields/PSE__c.field-meta.xml
<CustomField>
    <fullName>PSE__c</fullName>
    <description>Platform SE&#39;s name</description>
    <inlineHelpText>Platform SE&#39;s name</inlineHelpText>
    <label>PSE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>