force-app/main/default/objects/Entry__c/fields/Submission_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Submission_Timestamp__c</fullName>
    <label>Submission Timestamp</label>
    <type>DateTime</type>
</CustomField>