force-app/main/default/objects/Entry__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <summarizedField>Score__c.Composite_Score__c</summarizedField>
    <summaryForeignKey>Score__c.Entry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>