force-app/main/default/objects/Entry__c/validationRules/After_End.validationRule-meta.xml
<ValidationRule>
    <fullName>After_End</fullName>
    <active>true</active>
    <errorConditionFormula>and(
ISCHANGED(CreatedDate),
now() &gt; Contest__r.Stop_Accepting_Entries__c
)</errorConditionFormula>
    <errorMessage>The contest is no longer accepting entries.</errorMessage>
</ValidationRule>