force-app/main/default/objects/Entry__c/validationRules/Before_start.validationRule-meta.xml
<ValidationRule>
    <fullName>Before_start</fullName>
    <active>true</active>
    <errorConditionFormula>and(
  ISCHANGED(CreatedDate),
  now() &lt; Contest__r.Start_Accepting_Entries__c
)</errorConditionFormula>
    <errorMessage>The contest is not accepting entries yet.</errorMessage>
</ValidationRule>