force-app/main/default/objects/Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>App_Status__c</columns>
    <columns>Entry_Result__c</columns>
    <columns>Contest__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>