force-app/main/default/objects/Entry__c/listViews/My_Entries.listView-meta.xml
<ListView>
    <fullName>My_Entries</fullName>
    <columns>NAME</columns>
    <columns>Contest__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Entries</label>
</ListView>